Fixed spacing issue

--- a/Maze game/Styles/style.css
+++ b/Maze game/Styles/style.css
@@ -353,6 +353,7 @@ body {
 footer {
   background-color: #222;
   color: #ffffff;
+  margin-top: 70px;
   padding: 40px 0;
   text-align: center;
 }
